updates to notes.html, added work.html

--- a/html/index.html
+++ b/html/index.html
@@ -53,6 +53,7 @@
         <ul>
           <li><a href="#" class="selected">Resume</a></li>
           <li><a href="notes.html">Notes</a></li>
+          <li><a href="work.html">My Work</a></li>
         </ul>
       </nav>
     </div>
