--- a/html/work.html
+++ b/html/work.html
@@ -52,17 +52,17 @@
       <nav>
         <ul>
           <li><a href="index.html">Resume</a></li>
-          <li><a href="#" class="selected">Notes</a></li>
-          <li><a href="work.html">My Work</a></li>
+          <li><a href="notes.html">Notes</a></li>
+          <li><a href="#" class="selected">My Work</a></li>
         </ul>
       </nav>
     </div>
   </header>
 	<main>
     <section>
-      <h1 class="sectionTitle">Notes</h1>
-      <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p>
-      <section class="notes">
+      <h1 class="sectionTitle">My Work</h1>
+      <p class="intro">I have attempted to consolidate a variety of projects that showcase different coding abilities in this area. Please contact me if you'd like any additional examples</p>
+      <section class="work">
         <div class="note">
           <h3>Flexbox</h3>
           <p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p>
@@ -80,9 +80,6 @@
           <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
         </div>
       </section>
-    </section>
-    <section>
-      <h1 class="sectionTitle">Books I've Read</h1>
     </section>
   </main>
   <footer>
