--- a/html/notes/git.html
+++ b/html/notes/git.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Stuart Santos | Web Developer | Web Designer</title>
-  <link href="img/favicon.ico" rel="shortcut icon">
-  <link rel="stylesheet" href="css/styles.css">
+  <link href="../img/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
@@ -19,7 +19,7 @@
       return script;
     }
 
-    loadJS("js/scripts.min.js");
+    loadJS("../js/scripts.min.js");
   </script>
   <script type="text/javascript">
     (function(d) {
@@ -46,37 +46,37 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img src="img/profile.jpg" alt="Picture of Stuart Santos">
+        <img src="../img/profile.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Resume</a></li>
-          <li><a href="#" class="selected">Notes</a></li>
-          <li><a href="work.html">My Work</a></li>
+          <li><a href="../index.html">Resume</a></li>
+          <li><a href="../notes.html" class="selected">Notes</a></li>
+          <li><a href="../work.html">My Work</a></li>
         </ul>
       </nav>
     </div>
   </header>
 	<main>
     <section class="reading-wrapper">
-      <h1 class="sectionTitle">Notes</h1>
+      <h1 class="sectionTitle">Flexbox</h1>
       <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p>
       <div class="notes">
         <div class="note">
-          <h3><a href="notes/flexbox.html">Flexbox</a></h3>
+          <h3>Flexbox</h3>
           <p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/gruntfile.html">Gruntfile.js Template</a></h3>
+          <h3>Gruntfile.js Template</h3>
           <p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/git.html">Git Basics</a></h3>
+          <h3>Git Basics</h3>
           <p>Just some basic notes about working with Git to keep track of commonly used commands.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/swift.html">Working with Swift</a></h3>
+          <h3>Working with Swift</h3>
           <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
         </div>
       </div>
