Grunt Newer, Styles, Notes
This update adds Grunt Newer to the workflow since I found that updating one HTML file ran the minify task on all HTML files regardless on whether they had been updated or not. There's some incremental changes to the styles including the addition of the reading-wrapper class to the non-resume pages since they were way too wide for readability on desktop screens. Finally, just added a few new notes to the Notes section.

--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
 	<main>
     <section id="skills">
       <h2>Skills</h2>
-      <h3>HTML, CSS, Javascript, JQuery, Sass, Compass, GruntJS, Photoshop, Illustrator, SiteCatalyst, CMS (Tridion), Salesforce, Eloqua, Cheetahmail</h3>
+      <h3>HTML, CSS, Javascript, JQuery, Sass, Compass, GruntJS, Photoshop, Illustrator, SiteCatalyst, CMS (Tridion), Salesforce, Responsys, Eloqua, Cheetahmail</h3>
     </section>
     <section id="experience">
       <h2>Experience</h2>
