--- a/html/notes.html
+++ b/html/notes.html
@@ -61,7 +61,7 @@
 	<main>
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Notes</h1>
-      <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p>
+      <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but rather as an overview of things for me to keep in mind and to help myself or anyone else with future projects.</p>
       <div class="notes">
         <div class="note">
           <h3><a href="notes/flexbox.html">Flexbox</a></h3>
@@ -79,6 +79,10 @@
           <h3><a href="notes/swift.html">Working with Swift</a></h3>
           <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
         </div>
+        <div class="note">
+          <h3><a href="notes/google.html">Switching Default Search (note to self)</a></h3>
+          <p>Google Chrome will sometimes switch your default search engine to whatever country you're in due to your geolocation information. If you'd like to override that behavior, this is how you do it.</p>
+        </div>
       </div>
     </section>
     <section class="reading-wrapper">
@@ -86,7 +90,7 @@
     </section>
   </main>
   <footer>
-    <section>&copy; 2014 Stuart Santos 
+    <section class="reading-wrapper">&copy; 2014 Stuart Santos 
       <div class="contact">
         <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
         <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
