--- a/html/notes/git.html
+++ b/html/notes/git.html
@@ -52,7 +52,7 @@
       <nav>
         <ul>
           <li><a href="../index.html">Resume</a></li>
-          <li><a href="../notes.html" class="selected">Notes</a></li>
+          <li><a href="../notes.html">Notes</a></li>
           <li><a href="../work.html">My Work</a></li>
         </ul>
       </nav>
@@ -86,7 +86,7 @@
     </section>
   </main>
   <footer>
-    <section>&copy; 2014 Stuart Santos 
+    <section class="reading-wrapper">&copy; 2014 Stuart Santos 
       <div class="contact">
         <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
         <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
