Flexbox and Google
published the flexbox and google notes

--- a/html/index.html
+++ b/html/index.html
@@ -52,8 +52,8 @@
       <nav>
         <ul>
           <li><a href="#" class="selected">Resume</a></li>
-          <li><a href="notes.html">Notes</a></li>
-          <li><a href="work.html">My Work</a></li>
+          <li><a href="notes">Notes</a></li>
+          <li><a href="work">My Work</a></li>
         </ul>
       </nav>
     </div>
@@ -76,7 +76,7 @@
         <section class="job">
           <div>
             <h3>AIG, Inc</h3>
-            <h4>EMEA Consumer Digital Technical Lead (London, UK) (1/13 -  )</h4>
+            <h4>EMEA Consumer Digital Technical Lead (London, UK)</h4>
             <ul>
               <li>Delivered first responsive website in the company within 3 days at no cost (<a href="http://www.aigdirect.co.za">www.aigdirect.co.za</a>)</li>
               <li>Set up process to migrate all sites in the region to responsive design within 2 months</li>
@@ -92,7 +92,7 @@
       </section>
       <section class="job">
         <div>
-            <h4>eBusiness Site Manager (NY) (1/10 - 12/12)</h4>
+            <h4>eBusiness Site Manager (NY)</h4>
             <ul>
               <li>Build Internet sites for International Units and Intranets for Insurance Departments</li>
               <li>Create HTML email templates in Eloqua for Communications Department</li>
