--- a/html/my-notes/google.html
+++ b/html/my-notes/google.html
@@ -5,7 +5,7 @@
   <title>Stuart Santos | Web Developer | Web Designer</title>
   <link href="../img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="../css/styles.css">
-  <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
+  <meta name="description" content="Google can be quite annoying in changing your locale against your will. This post is to show you how you can override that change on your Mac.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
   <script type="text/javascript">
@@ -51,9 +51,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="../index.html">Resume</a></li>
-          <li><a href="../notes.html">Notes</a></li>
-          <li><a href="../work.html">My Work</a></li>
+          <li><a href="/">Resume</a></li>
+          <li><a href="../notes">Notes</a></li>
+          <li><a href="../work">My Work</a></li>
         </ul>
       </nav>
     </div>
