--- a/html/notes.html
+++ b/html/notes.html
@@ -5,7 +5,7 @@
   <title>Stuart Santos | Web Developer | Web Designer</title>
   <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
+  <meta name="description" content="Notes about my development work and possible code fixes to help with past projects and new projects that may require the information in the future.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
   <script type="text/javascript">
@@ -51,9 +51,9 @@
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Resume</a></li>
+          <li><a href="/">Resume</a></li>
           <li><a href="#" class="selected">Notes</a></li>
-          <li><a href="work.html">My Work</a></li>
+          <li><a href="work">My Work</a></li>
         </ul>
       </nav>
     </div>
@@ -64,23 +64,23 @@
       <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but rather as an overview of things for me to keep in mind and to help myself or anyone else with future projects.</p>
       <div class="notes">
         <div class="note">
-          <h3><a href="notes/flexbox.html">Flexbox</a></h3>
+          <h3><a href="my-notes/flexbox">Flexbox</a></h3>
           <p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/gruntfile.html">Gruntfile.js Template</a></h3>
+          <h3><a href="my-notes/gruntfile">Gruntfile.js Template</a></h3>
           <p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/git.html">Git Basics</a></h3>
+          <h3><a href="my-notes/git">Git Basics</a></h3>
           <p>Just some basic notes about working with Git to keep track of commonly used commands.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/swift.html">Working with Swift</a></h3>
+          <h3><a href="my-notes/swift">Working with Swift</a></h3>
           <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
         </div>
         <div class="note">
-          <h3><a href="notes/google.html">Switching Default Search (note to self)</a></h3>
+          <h3><a href="my-notes/google">Switching Default Search (note to self)</a></h3>
           <p>Google Chrome will sometimes switch your default search engine to whatever country you're in due to your geolocation information. If you'd like to override that behavior, this is how you do it.</p>
         </div>
       </div>
