browser sync, nav text shadow

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
 	  ga('send', 'pageview');
 
 	</script>
-	
+
 </head>
 <body>
 	<header>
@@ -78,7 +78,7 @@
             <h3>AIG, Inc</h3>
             <h4>EMEA Consumer Digital Technical Lead (London, UK)</h4>
             <ul>
-              <li>Delivered first responsive website in the company within 3 days at no cost (<a href="http://www.aigdirect.co.za">www.aigdirect.co.za</a>)</li>
+              <li>Delivered first responsive website in the company within 3 days at no cost (<a href="http://www.aig.co.za">www.aig.co.za</a>)</li>
               <li>Set up process to migrate all sites in the region to responsive design within 2 months</li>
               <li>Manage all Consumer website builds within EMEA (Europe, Middle East, Africa)</li>
               <li>Drove adoption of XML-delivered Female Cancer quotations in Finland</li>
@@ -127,7 +127,7 @@
             </ul>
           </div>
         <aside class="dates"><div>07/05 - 06/08</div></aside>
-      </section>  
+      </section>
     </section>
     <section id="education">
         <h2>Education</h2>
@@ -153,7 +153,7 @@
     </section>
   </main>
   <footer>
-    <section>&copy; 2014 Stuart Santos 
+    <section>&copy; 2014 Stuart Santos
       <div class="contact">
         <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
         <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
