--- a/html/my-notes/flexbox.html
+++ b/html/my-notes/flexbox.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stuart Santos | Web Developer | Web Designer</title>
+  <title>Fixing quirks and supporting Blackberry 7 with flexbox</title>
   <link href="../img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="../css/styles.css">
-  <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
+  <meta name="description" content="This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
   <script type="text/javascript">
@@ -46,14 +46,13 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img src="../img/profile.jpg" alt="Picture of Stuart Santos">
+        <img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
           <li><a href="../index.html">Resume</a></li>
           <li><a href="../notes.html">Notes</a></li>
-          <li><a href="../work.html">My Work</a></li>
         </ul>
       </nav>
     </div>
@@ -66,40 +65,41 @@
         <p>There are two key things to keep in mind when using the flexbox propery. First of all, if your CSS code is not mobile first, you want to remove all floats that may be present at the desktop breakpoints. If you were to set a flex container and the child elements are floated, you get some really strange behavior with element positioning.</p>
         <p>The second important issue deals mainly with Blackberry 7 browser support. Strangely, the flexbox property is supported, however the quirk with Blackberry is that it ignores the flex declaration if you have set the child elements to row wrap. In order to remedy this situation, you should be declaring the orientation and direction of your flex container to be <strong>vertical</strong> and <strong>column</strong>. </p>
         <p>Once you have all that set in place, it should be relatively easy to style the layout of your page. You can see the code we finally used below to make sure the flex ordering and wrapping worked propely since our CMS ouputs the center grid element after the right grid element in the HTML.</p>
-        <code>
-          #grid_wrapper {
-            display: -webkit-box;
-            display: -webkit-flex;
-            display: -moz-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: vertical;
-            -moz-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -moz-box-direction: normal;
-            -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-            flex-direction: column;
-            width: 100%;
-          }
-          #gridRight {
-            -webkit-box-ordinal-group: 2;
-            -moz-box-ordinal-group: 2;
-            -ms-flex-order: 2;
-            -webkit-order: 2;
-            order: 2;
-            width: 100%;
-            padding-left: 0;
-            float: none;
-          }
-          #gridCenter {
-            -webkit-box-ordinal-group: 1;
-            -moz-box-ordinal-group: 1;
-            -ms-flex-order: 1;
-            -webkit-order: 1;
-            order: 1;
-          }
-        </code>
+<!-- htmlmin:ignore -->
+<code>#grid_wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+}
+#gridRight {
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+  width: 100%;
+  padding-left: 0;
+  float: none;
+}
+#gridCenter {
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
+  order: 1;
+}
+</code>
+<!-- htmlmin:ignore -->
       </div>
     </section>
   </main>
