--- a/html/my-notes/gruntfile.html
+++ b/html/my-notes/gruntfile.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stuart Santos | Web Developer | Web Designer</title>
+  <title>My GruntJS template for new projects</title>
   <link href="../img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="../css/styles.css">
-  <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
+  <meta name="description" content="Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
   <script type="text/javascript">
@@ -46,14 +46,13 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img src="../img/profile.jpg" alt="Picture of Stuart Santos">
+        <img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
           <li><a href="../index.html">Resume</a></li>
           <li><a href="../notes.html">Notes</a></li>
-          <li><a href="../work.html">My Work</a></li>
         </ul>
       </nav>
     </div>
@@ -63,8 +62,8 @@
       <h1 class="sectionTitle">Gruntfile.js</h1>
       <div class="notes">
         <p>Ever since I started using GruntJS in my development workflow, it's pretty much the first thing I set up for every new project. One of the annoying things about starting a new project from scratch is creating the Gruntfile.js and setting up the configurations you've applied to each task. This is why I have decided to post my Gruntfile.js template below with explanations about each task's configuration.</p>
-        <code>
-module.exports = function(grunt) {
+        <!-- htmlmin:ignore -->
+<code>module.exports = function(grunt) {
 
 // Project configuration.
 grunt.initConfig({
@@ -148,8 +147,8 @@ grunt.loadNpmTasks('grunt-browser-sync');
 // Default task(s).
 grunt.registerTask('default', ['browserSync','watch']); // Typing 'grunt' into Terminal will run browserSync first
                                                         // and then watch all of my files
-};
-        </code>
+};</code>
+<!-- htmlmin:ignore -->
       </div>
     </section>
   </main>
