--- a/html/my-notes/swift.html
+++ b/html/my-notes/swift.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stuart Santos | Web Developer | Web Designer</title>
+  <title>My notes on Swift | Stuart Santos</title>
   <link href="../img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
@@ -46,14 +46,13 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img src="../img/profile.jpg" alt="Picture of Stuart Santos">
+        <img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
           <li><a href="../index.html">Resume</a></li>
           <li><a href="../notes.html">Notes</a></li>
-          <li><a href="../work.html">My Work</a></li>
         </ul>
       </nav>
     </div>
