--- a/html/notes.html
+++ b/html/notes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stuart Santos | Web Developer | Web Designer</title>
+  <title>My development notes | Stuart Santos</title>
   <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="Notes about my development work and possible code fixes to help with past projects and new projects that may require the information in the future.">
@@ -46,14 +46,13 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img src="img/profile.jpg" alt="Picture of Stuart Santos">
+        <img srcset="img/profile.jpg 2x, img/profile-small.jpg 1x" src="img/profile-small.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
           <li><a href="/">Resume</a></li>
           <li><a href="#" class="selected">Notes</a></li>
-          <li><a href="work">My Work</a></li>
         </ul>
       </nav>
     </div>
@@ -68,25 +67,26 @@
           <p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p>
         </div>
         <div class="note">
-          <h3><a href="my-notes/gruntfile">Gruntfile.js Template</a></h3>
+          <h3><a href="my-notes/gruntfile">Gruntfile.js template</a></h3>
           <p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p>
         </div>
         <div class="note">
-          <h3><a href="my-notes/git">Git Basics</a></h3>
+          <h3><a href="my-notes/git">Git basics</a></h3>
           <p>Just some basic notes about working with Git to keep track of commonly used commands.</p>
         </div>
         <div class="note">
-          <h3><a href="my-notes/swift">Working with Swift</a></h3>
-          <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
+          <h3><a href="my-notes/retina">Generating retina favicons</a></h3>
+          <p>This post deals with creating retina-grade favicons for your website. It does require purchase of software, but I've found it to be the easiest way to accomplish this task.</p>
         </div>
         <div class="note">
-          <h3><a href="my-notes/google">Switching Default Search (note to self)</a></h3>
+          <h3><a href="my-notes/css-font-properties">CSS font properties</a></h3>
+          <p>Making sure that the type on your website is optimized for legibility is important to keep in mind. To help you acheive better display of your type, this will show you different CSS properties and general best practices to implement on your site.</p>
+        </div>
+        <div class="note">
+          <h3><a href="my-notes/google">Switching default search (updated)</a></h3>
           <p>Google Chrome will sometimes switch your default search engine to whatever country you're in due to your geolocation information. If you'd like to override that behavior, this is how you do it.</p>
         </div>
       </div>
-    </section>
-    <section class="reading-wrapper">
-      <h1 class="sectionTitle">Books I've Read</h1>
     </section>
   </main>
   <footer>
