--- a/html/work.html
+++ b/html/work.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Stuart Santos | Web Developer | Web Designer</title>
+  <title>My work | Stuart Santos</title>
   <link href="img/favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
+  <meta name="description" content="This is a small showcase of some projects that I've worked on during my career in front-end development.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script>
   <script type="text/javascript">
@@ -53,7 +53,7 @@
         <ul>
           <li><a href="index.html">Resume</a></li>
           <li><a href="notes.html">Notes</a></li>
-          <li><a href="#" class="selected">My Work</a></li>
+          <li><a href="#" class="selected">My work</a></li>
         </ul>
       </nav>
     </div>
@@ -62,22 +62,16 @@
     <section class="reading-wrapper">
       <h1 class="sectionTitle">My Work</h1>
       <p class="intro">I have consolidated a variety of projects that showcase different coding abilities in this area. Please contact me if you'd like any additional examples</p>
+    </section>
+    <section>
       <div class="work">
-        <div class="note">
-          <h3>Flexbox</h3>
-          <p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p>
-        </div>
-        <div class="note">
-          <h3>Gruntfile.js Template</h3>
-          <p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p>
-        </div>
-        <div class="note">
-          <h3>Git Basics</h3>
-          <p>Just some basic notes about working with Git to keep track of commonly used commands.</p>
-        </div>
-        <div class="note">
-          <h3>Working with Swift</h3>
-          <p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p>
+        <div class="project">
+          <img class="preview" srcset="img/aig-south-africa-large.jpg 2x, img/aig-south-africa.jpg 1x" src="img/aig-south-africa.jpg" alt="AIG South Africa Preview">
+          <div class="description">
+            <div class="centered">
+              <h2 class="title">AIG South Africa</h2>
+              Mobile-first website coded for AIG South Africa</div>
+          </div>
         </div>
       </div>
     </section>
