--- a/min/my-notes/flexbox.html
+++ b/min/my-notes/flexbox.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Stuart Santos | Web Developer | Web Designer</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Fixing quirks and supporting Blackberry 7 with flexbox</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
     function loadJS( src ){
       "use strict";
       var ref = window.document.getElementsByTagName( "script" )[ 0 ];
@@ -20,4 +20,38 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img src="../img/profile.jpg" alt="Picture of Stuart Santos"><h1>Stuart Santos</h1></div><nav><ul><li><a href="../index.html">Resume</a></li><li><a href="../notes.html">Notes</a></li><li><a href="../work.html">My Work</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Flexbox</h1><div class="notes"><p>Flexbox is a convenient CSS property that makes web design and layout a much simpler process. However, since it's a relatively new addition to the CSS tool set, you will find that certain browsers and devices act a bit strange when you start using it. Even with that caveat, I added flexbox to the CSS we use for all of our AIG Consumer websites to help with layout and positioning of elements on the page irrespective of DOM order at mobile breakpoints.</p><p>There are two key things to keep in mind when using the flexbox propery. First of all, if your CSS code is not mobile first, you want to remove all floats that may be present at the desktop breakpoints. If you were to set a flex container and the child elements are floated, you get some really strange behavior with element positioning.</p><p>The second important issue deals mainly with Blackberry 7 browser support. Strangely, the flexbox property is supported, however the quirk with Blackberry is that it ignores the flex declaration if you have set the child elements to row wrap. In order to remedy this situation, you should be declaring the orientation and direction of your flex container to be <strong>vertical</strong> and <strong>column</strong>.</p><p>Once you have all that set in place, it should be relatively easy to style the layout of your page. You can see the code we finally used below to make sure the flex ordering and wrapping worked propely since our CMS ouputs the center grid element after the right grid element in the HTML.</p><code>#grid_wrapper { display: -webkit-box; display: -webkit-flex; display: -moz-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -moz-box-orient: vertical; -webkit-box-direction: normal; -moz-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; width: 100%; } #gridRight { -webkit-box-ordinal-group: 2; -moz-box-ordinal-group: 2; -ms-flex-order: 2; -webkit-order: 2; order: 2; width: 100%; padding-left: 0; float: none; } #gridCenter { -webkit-box-ordinal-group: 1; -moz-box-ordinal-group: 1; -ms-flex-order: 1; -webkit-order: 1; order: 1; }</code></div></section></main><footer><section class="reading-wrapper">&copy; 2015 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><h1>Stuart Santos</h1></div><nav><ul><li><a href="../index.html">Resume</a></li><li><a href="../notes.html">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Flexbox</h1><div class="notes"><p>Flexbox is a convenient CSS property that makes web design and layout a much simpler process. However, since it's a relatively new addition to the CSS tool set, you will find that certain browsers and devices act a bit strange when you start using it. Even with that caveat, I added flexbox to the CSS we use for all of our AIG Consumer websites to help with layout and positioning of elements on the page irrespective of DOM order at mobile breakpoints.</p><p>There are two key things to keep in mind when using the flexbox propery. First of all, if your CSS code is not mobile first, you want to remove all floats that may be present at the desktop breakpoints. If you were to set a flex container and the child elements are floated, you get some really strange behavior with element positioning.</p><p>The second important issue deals mainly with Blackberry 7 browser support. Strangely, the flexbox property is supported, however the quirk with Blackberry is that it ignores the flex declaration if you have set the child elements to row wrap. In order to remedy this situation, you should be declaring the orientation and direction of your flex container to be <strong>vertical</strong> and <strong>column</strong>.</p><p>Once you have all that set in place, it should be relatively easy to style the layout of your page. You can see the code we finally used below to make sure the flex ordering and wrapping worked propely since our CMS ouputs the center grid element after the right grid element in the HTML.</p>
+<code>#grid_wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -moz-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  width: 100%;
+}
+#gridRight {
+  -webkit-box-ordinal-group: 2;
+  -moz-box-ordinal-group: 2;
+  -ms-flex-order: 2;
+  -webkit-order: 2;
+  order: 2;
+  width: 100%;
+  padding-left: 0;
+  float: none;
+}
+#gridCenter {
+  -webkit-box-ordinal-group: 1;
+  -moz-box-ordinal-group: 1;
+  -ms-flex-order: 1;
+  -webkit-order: 1;
+  order: 1;
+}
+</code>
+</div></section></main><footer><section class="reading-wrapper">&copy; 2015 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
