--- a/min/my-notes/gruntfile.html
+++ b/min/my-notes/gruntfile.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Stuart Santos | Web Developer | Web Designer</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My GruntJS template for new projects</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js" async></script><script type="text/javascript">/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
     function loadJS( src ){
       "use strict";
       var ref = window.document.getElementsByTagName( "script" )[ 0 ];
@@ -20,4 +20,90 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img src="../img/profile.jpg" alt="Picture of Stuart Santos"><h1>Stuart Santos</h1></div><nav><ul><li><a href="../index.html">Resume</a></li><li><a href="../notes.html">Notes</a></li><li><a href="../work.html">My Work</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Gruntfile.js</h1><div class="notes"><p>Ever since I started using GruntJS in my development workflow, it's pretty much the first thing I set up for every new project. One of the annoying things about starting a new project from scratch is creating the Gruntfile.js and setting up the configurations you've applied to each task. This is why I have decided to post my Gruntfile.js template below with explanations about each task's configuration.</p><code>module.exports = function(grunt) { // Project configuration. grunt.initConfig({ pkg: grunt.file.readJSON('package.json'), uglify: { // This is the uglify task which is dynamically mapped to all of my js files for minification dynamic_mappings: { files: [ { expand: true, // Enable dynamic expansion. cwd: 'js', // Src matches are relative to this path. src: ['*.js'], // Actual pattern(s) to match. dest: 'min/js', // Destination path prefix. ext: '.min.js', // Dest filepaths will have this extension. extDot: 'first' // Extensions in filenames begin after the first dot } ] } }, compass: { // The compass task runs the compass preprocessor on all of my scss files dist: { options: { config: 'config.rb', // This maps to my config.rb file sourcemap: true // This generates a sourcemap file so that you can edit scss directly in DevTools } } }, htmlmin: { // HTML minification task dynamically mapped multiple: { options: { removeComments: true, // Removes comments collapseWhitespace: true // Removes whitespace }, files: [{ expand: true, // Enable dynamic expansion cwd: 'html', // Src matches are relative to this path src: ['*.html', '**/*.html'], // Patterns to match dest: 'min/' // Destination path prefix }] } }, browserSync: { // BrowserSync creates a localhost and auto-updates browser when files are changed bsFiles: { src : [ // Patterns to match 'html/*.html', 'html/**/*.html', 'js/*.js', 'sass/*.scss', 'sass/**/*.scss', 'config.rb' ] }, options: { watchTask: true, // Makes it compatible with the watch task server: './min' // This is what folder you want to serve up as the site when the localhost launches } }, watch: { // Watch task will watch your files for updates and run a task when they change js: { files: ['js/*.js'], // Which js files to watch tasks: ['newer:uglify'] // Runs the uglify task through newer so that only changed files are updated }, css: { files: ['sass/*.scss', 'sass/**/*.scss', 'config.rb'], // Which scss files to watch tasks: ['compass'] // Runs the compass task when files are updated }, html: { files: ['html/*.html', 'html/**/*.html'], // Which html files to watch tasks: ['newer:htmlmin'] // Runs htmlmin task through newer so that only changed files are updated } } }); // Loads all of the tasks from the node modules grunt.loadNpmTasks('grunt-contrib-uglify'); grunt.loadNpmTasks('grunt-contrib-compass'); grunt.loadNpmTasks('grunt-contrib-watch'); grunt.loadNpmTasks('grunt-contrib-htmlmin'); grunt.loadNpmTasks('grunt-newer'); grunt.loadNpmTasks('grunt-browser-sync'); // Default task(s). grunt.registerTask('default', ['browserSync','watch']); // Typing 'grunt' into Terminal will run browserSync first // and then watch all of my files };</code></div></section></main><footer><section class="reading-wrapper">&copy; 2015 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><h1>Stuart Santos</h1></div><nav><ul><li><a href="../index.html">Resume</a></li><li><a href="../notes.html">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Gruntfile.js</h1><div class="notes"><p>Ever since I started using GruntJS in my development workflow, it's pretty much the first thing I set up for every new project. One of the annoying things about starting a new project from scratch is creating the Gruntfile.js and setting up the configurations you've applied to each task. This is why I have decided to post my Gruntfile.js template below with explanations about each task's configuration.</p>
+<code>module.exports = function(grunt) {
+
+// Project configuration.
+grunt.initConfig({
+  pkg: grunt.file.readJSON('package.json'),
+  uglify: {                 // This is the uglify task which is dynamically mapped to all of my js files for minification
+    dynamic_mappings: {
+      files: [
+        {
+          expand: true,     // Enable dynamic expansion.
+          cwd: 'js',        // Src matches are relative to this path.
+          src: ['*.js'],    // Actual pattern(s) to match.
+          dest: 'min/js',   // Destination path prefix.
+          ext: '.min.js',   // Dest filepaths will have this extension.
+          extDot: 'first'   // Extensions in filenames begin after the first dot
+        }
+      ]
+    }
+  },
+  compass: {                  // The compass task runs the compass preprocessor on all of my scss files
+    dist: {
+      options: {
+        config: 'config.rb',  // This maps to my config.rb file
+        sourcemap: true       // This generates a sourcemap file so that you can edit scss directly in DevTools
+      }
+    }
+  },
+  htmlmin: {                      // HTML minification task dynamically mapped
+    multiple: {
+      options: {
+        removeComments: true,     // Removes comments
+        collapseWhitespace: true  // Removes whitespace
+      },
+      files: [{
+        expand: true,                 // Enable dynamic expansion
+        cwd: 'html',                  // Src matches are relative to this path
+        src: ['*.html', '**/*.html'], // Patterns to match
+        dest: 'min/'                  // Destination path prefix
+      }]
+    }
+  },
+  browserSync: {          // BrowserSync creates a localhost and auto-updates browser when files are changed
+    bsFiles: {
+      src : [             // Patterns to match
+        'html/*.html',
+        'html/**/*.html',
+        'js/*.js',
+        'sass/*.scss',
+        'sass/**/*.scss',
+        'config.rb'
+      ]
+    },
+    options: {
+        watchTask: true,  // Makes it compatible with the watch task
+        server: './min'   // This is what folder you want to serve up as the site when the localhost launches
+    }
+  },
+  watch: {                    // Watch task will watch your files for updates and run a task when they change
+    js: {
+      files: ['js/*.js'],     // Which js files to watch
+      tasks: ['newer:uglify'] // Runs the uglify task through newer so that only changed files are updated
+    },
+    css: {
+      files: ['sass/*.scss', 'sass/**/*.scss', 'config.rb'],  // Which scss files to watch
+      tasks: ['compass']                                      // Runs the compass task when files are updated
+    },
+    html: {
+      files: ['html/*.html', 'html/**/*.html'], // Which html files to watch
+      tasks: ['newer:htmlmin']                  // Runs htmlmin task through newer so that only changed files are updated
+    }
+  }
+});
+
+// Loads all of the tasks from the node modules
+grunt.loadNpmTasks('grunt-contrib-uglify');
+grunt.loadNpmTasks('grunt-contrib-compass');
+grunt.loadNpmTasks('grunt-contrib-watch');
+grunt.loadNpmTasks('grunt-contrib-htmlmin');
+grunt.loadNpmTasks('grunt-newer');
+grunt.loadNpmTasks('grunt-browser-sync');
+
+// Default task(s).
+grunt.registerTask('default', ['browserSync','watch']); // Typing 'grunt' into Terminal will run browserSync first
+                                                        // and then watch all of my files
+};</code>
+</div></section></main><footer><section class="reading-wrapper">&copy; 2015 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
