updated htaccess and linkedin
updated to default to ssl and linked in href

--- a/html/my-notes/css-font-properties.html
+++ b/html/my-notes/css-font-properties.html
@@ -94,7 +94,7 @@
         <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
         <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
         <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a>
-        <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a>
+        <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a>
       </div>
     </section>
   </footer>
