--- a/html/index.html
+++ b/html/index.html
@@ -149,12 +149,12 @@
     </section>
   </main>
   <footer>
-    <section>&copy; 2015 Stuart Santos
+    <section>&copy; 2017 Stuart Santos
       <div class="contact">
         <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
         <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
         <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a>
-        <a href="https://www.linkedin.com/profile/public-profile-settings?trk=prof-edit-edit-public_profile"><span class="icon-linkedin"></span></a>
+        <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a>
       </div>
     </section>
   </footer>
