404, htaccess, jquery, copyright
updated copyright in footer, added a 404 page, updated htaccess, updated jquery version

--- a/html/my-notes/swift.html
+++ b/html/my-notes/swift.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
