--- a/html/404.html
+++ b/html/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My work | Stuart Santos</title>
-  <link href="img/favicon.ico" rel="shortcut icon">
-  <link rel="stylesheet" href="css/styles.css">
-  <meta name="description" content="This is a small showcase of some projects that I've worked on during my career in front-end development.">
+  <title>404 | Stuart Santos</title>
+  <link href="../img/favicon.ico" rel="shortcut icon">
+  <link rel="stylesheet" href="../css/styles.css">
+  <meta name="description" content="404 Page">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
@@ -31,37 +31,24 @@
 
 </head>
 <body>
-	<header>
+  <header>
     <div class="top">
       <div class="name">
-        <img src="img/profile.jpg" alt="Picture of Stuart Santos">
+        <img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos">
         <h1>Stuart Santos</h1>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Resume</a></li>
-          <li><a href="notes.html">Notes</a></li>
-          <li><a href="#" class="selected">My work</a></li>
+          <li><a href="../index.html">Resume</a></li>
+          <li><a href="../notes.html">Notes</a></li>
         </ul>
       </nav>
     </div>
   </header>
-	<main>
+  <main>
     <section class="reading-wrapper">
-      <h1 class="sectionTitle">My Work</h1>
-      <p class="intro">I have consolidated a variety of projects that showcase different coding abilities in this area. Please contact me if you'd like any additional examples</p>
-    </section>
-    <section>
-      <div class="work">
-        <div class="project">
-          <img class="preview" srcset="img/aig-south-africa-large.jpg 2x, img/aig-south-africa.jpg 1x" src="img/aig-south-africa.jpg" alt="AIG South Africa Preview">
-          <div class="description">
-            <div class="centered">
-              <h2 class="title">AIG South Africa</h2>
-              Mobile-first website coded for AIG South Africa</div>
-          </div>
-        </div>
-      </div>
+      <h1 class="sectionTitle">404</h1>
+      <p class="intro">Sorry. Something went wrong. <a href="/">Return to Homepage &gt;</a></p>
     </section>
   </main>
   <footer>
