--- a/html/my-notes/flexbox.html
+++ b/html/my-notes/flexbox.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
