--- a/html/my-notes/google.html
+++ b/html/my-notes/google.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="Google can be quite annoying in changing your locale against your will. This post is to show you how you can override that change on your Mac.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
