--- a/html/my-notes/gruntfile.html
+++ b/html/my-notes/gruntfile.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
