--- a/html/my-notes/retina.html
+++ b/html/my-notes/retina.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <meta name="description" content="If you want to make retina-grade favicons, this post is just for you. It does require purchase of software, but I've found it to be the easiest way to accomplish this task.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="/js/scripts.min.js" async></script>
   <script type="text/javascript">
     (function(d) {
