--- a/html/work.html
+++ b/html/work.html
@@ -35,7 +35,7 @@
     <div class="top">
       <div class="name">
         <img src="img/profile.jpg" alt="Picture of Stuart Santos">
-        <h1>Stuart Santos</h1>
+        <div class="fullname">Stuart Santos</div>
       </div>
       <nav>
         <ul>
