--- a/html/my-notes/retina.html
+++ b/html/my-notes/retina.html
@@ -35,7 +35,7 @@
     <div class="top">
       <div class="name">
         <img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos">
-        <h1>Stuart Santos</h1>
+        <div class="fullname">Stuart Santos</div>
       </div>
       <nav>
         <ul>
