--- a/html/notes.html
+++ b/html/notes.html
@@ -7,8 +7,42 @@
   <link rel="stylesheet" href="css/styles.css">
   <meta name="description" content="Notes about my development work and possible code fixes to help with past projects and new projects that may require the information in the future.">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="/js/scripts.min.js" async></script>
+  <script>
+    /*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+    (function( w ){
+      var loadJS = function( src, cb, ordered ){
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName( "script" )[ 0 ];
+        var script = w.document.createElement( "script" );
+
+        if (typeof(cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore( script, ref );
+
+        if (cb && typeof(cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if( typeof module !== "undefined" ){
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }( typeof global !== "undefined" ? global : this ));
+
+    loadJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js', true);
+    loadJS('/js/scripts.min.js', true);
+  </script>
   <script type="text/javascript">
     (function(d) {
       var config = {
@@ -34,13 +68,15 @@
 	<header>
     <div class="top">
       <div class="name">
-        <img srcset="img/profile.jpg 2x, img/profile-small.jpg 1x" src="img/profile-small.jpg" alt="Picture of Stuart Santos">
-        <div class="fullname">Stuart Santos</div>
+        <a href="/">
+          <img srcset="img/profile.jpg 2x, img/profile-small.jpg 1x" src="img/profile-small.jpg" alt="Picture of Stuart Santos">
+          <div class="fullname">Stuart Santos</div>
+        </a>
       </div>
       <nav>
         <ul>
-          <li><a href="/">Resume</a></li>
-          <li><a href="#" class="selected">Notes</a></li>
+          <li><a href="/"><i class="icofont-business-man"></i> Resume</a></li>
+          <li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li>
         </ul>
       </nav>
     </div>
@@ -80,10 +116,10 @@
   <footer>
     <section class="reading-wrapper">&copy; 2020 Stuart Santos
       <div class="contact">
-        <a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a>
-        <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a>
-        <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a>
-        <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a>
+        <a href="mailto:santos.stuart@gmail.com"><i class="icofont-mail"></i></a>
+        <a href="https://twitter.com/stuartesantos"><i class="icofont-twitter"></i></a>
+        <a href="https://github.com/stuartsantos"><i class="icofont-code"></i></a>
+        <a href="https://www.linkedin.com/in/stuartsantos"><i class="icofont-linkedin"></i></a>
       </div>
     </section>
   </footer>
