--- a/min/my-notes/css-font-properties.html
+++ b/min/my-notes/css-font-properties.html
@@ -1,4 +1,37 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Using CSS to optimize your site's typography | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="Making sure that the type on your website is optimized for legibility is an important aspect to keep in mind. To help you acheive better display of your type, this will show you different CSS properties and general best practices to use on your site."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/js/scripts.min.js" async></script><script type="text/javascript">(function(d) {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Using CSS to optimize your site's typography | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="Making sure that the type on your website is optimized for legibility is an important aspect to keep in mind. To help you acheive better display of your type, this will show you different CSS properties and general best practices to use on your site."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script>/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+    (function( w ){
+      var loadJS = function( src, cb, ordered ){
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName( "script" )[ 0 ];
+        var script = w.document.createElement( "script" );
+
+        if (typeof(cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore( script, ref );
+
+        if (cb && typeof(cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if( typeof module !== "undefined" ){
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }( typeof global !== "undefined" ? global : this ));
+
+    loadJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js', true);
+    loadJS('/js/scripts.min.js', true);</script><script src="https://kit.fontawesome.com/0189004d21.js" crossorigin="anonymous"></script><script type="text/javascript">(function(d) {
       var config = {
         kitId: 'mte7xac',
         scriptTimeout: 3000
@@ -10,11 +43,11 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></div><nav><ul><li><a href="/">Resume</a></li><li><a href="../notes">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Optimizing typography through CSS</h1><div class="notes"><p>Typography is the cornerstone of the web. If you think about what the vast majority of your interaction with a website consists of, it's reading content. To that end, making sure that the type on your website is optimized for legibility should be one of the most important considerations of development.</p><p>There are a few rules to abide by and a few CSS properties that will ensure that your type is dressed for success.</p><h2>Line Length: KISS (Keep It <s>Simple</s> Short Stupid!)</h2><p>Ok, so this first one isn't really a CSS font property, but it is a good rule to keep in mind. The main idea is that the line length of your content should hit a relative sweet spot of around <strong>45-75 characters (with spaces) per line</strong>. The reasoning behind this rule is that if the line length is either too wide or too narrow, it can become much harder for the human eye to efficiently parse the information quickly.</p><p>If your line length is too long, it creates eye fatigue by the time the reader reaches the end of the line. Even worse is what happens <em>after</em> they reach the end of the text line. Have you ever found yourself reading a book and upon reaching the end of one line and starting to read the next one, you find that you're reading the same line you just finished? Or maybe you find that you accidentally skipped down an extra line. This is the result of poor line height and line length which is why you should try to keep line length between 45-75 characters and to give each line some breathing room of about 1.3-1.5, (don't you dare use absolute values like pixels), in your line-height property.</p><h2>CSS to the rescue</h2><p>As CSS has become more powerful over the years, so too has our ability to manipulate type in a way that brings us closer to parity with print design. In doing so, Open Type features have allowed us to access font properties such as kerning and anti-aliasing. Features like these help us to deliver a much more readable version of our type to the masses.</p><h3>Anti-Alias</h3><p>If you were to take a magnifying glass to the type on your site, you're bound to see a lot of jagged edges where letters curve. In order to enable font smoothing, we have to add the following code to our CSS file.</p>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><a href="/"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></a></div><nav><ul><li><a href="/"><i class="icofont-business-man"></i> Resume</a></li><li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Optimizing typography through CSS</h1><div class="notes"><p>Typography is the cornerstone of the web. If you think about what the vast majority of your interaction with a website consists of, it's reading content. To that end, making sure that the type on your website is optimized for legibility should be one of the most important considerations of development.</p><p>There are a few rules to abide by and a few CSS properties that will ensure that your type is dressed for success.</p><h2>Line Length: KISS (Keep It <s>Simple</s> Short Stupid!)</h2><p>Ok, so this first one isn't really a CSS font property, but it is a good rule to keep in mind. The main idea is that the line length of your content should hit a relative sweet spot of around <strong>45-75 characters (with spaces) per line</strong>. The reasoning behind this rule is that if the line length is either too wide or too narrow, it can become much harder for the human eye to efficiently parse the information quickly.</p><p>If your line length is too long, it creates eye fatigue by the time the reader reaches the end of the line. Even worse is what happens <em>after</em> they reach the end of the text line. Have you ever found yourself reading a book and upon reaching the end of one line and starting to read the next one, you find that you're reading the same line you just finished? Or maybe you find that you accidentally skipped down an extra line. This is the result of poor line height and line length which is why you should try to keep line length between 45-75 characters and to give each line some breathing room of about 1.3-1.5, (don't you dare use absolute values like pixels), in your line-height property.</p><h2>CSS to the rescue</h2><p>As CSS has become more powerful over the years, so too has our ability to manipulate type in a way that brings us closer to parity with print design. In doing so, Open Type features have allowed us to access font properties such as kerning and anti-aliasing. Features like these help us to deliver a much more readable version of our type to the masses.</p><h3>Anti-Alias</h3><p>If you were to take a magnifying glass to the type on your site, you're bound to see a lot of jagged edges where letters curve. In order to enable font smoothing, we have to add the following code to our CSS file.</p>
 <code>-webkit-font-smoothing: antialiased;</code>
 <h3>Kerning</h3><p>Finally, to make sure that the default font styles aren't pushing our letters unnecessarily apart from each other due to poor kerning support, you can add the following snippet to help alleviate that issue.</p>
 <code>text-rendering: optimizeLegibility;</code>
 <h3>Some extras</h3><p>For some final tweaking, the following code can also enhance the legibility of your site's font.</p>
 <code>-moz-osx-font-smoothing: grayscale;
 -moz-font-feature-settings: "liga" on;</code>
-<p>That's it, just a few extra lines of code applied to the body and your text is already looking much better than the default browser styles. I hope this was useful and informative.</p></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+<p>That's it, just a few extra lines of code applied to the body and your text is already looking much better than the default browser styles. I hope this was useful and informative.</p></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><i class="icofont-mail"></i></a> <a href="https://twitter.com/stuartesantos"><i class="icofont-twitter"></i></a> <a href="https://github.com/stuartsantos"><i class="icofont-code"></i></a> <a href="https://www.linkedin.com/in/stuartsantos"><i class="icofont-linkedin"></i></a></div></section></footer></body></html>
