--- a/min/my-notes/google.html
+++ b/min/my-notes/google.html
@@ -1,4 +1,37 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Switching local google search back to google.com | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="Google can be quite annoying in changing your locale against your will. This post is to show you how you can override that change on your Mac."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/js/scripts.min.js" async></script><script type="text/javascript">(function(d) {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Switching local google search back to google.com | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="Google can be quite annoying in changing your locale against your will. This post is to show you how you can override that change on your Mac."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script>/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+    (function( w ){
+      var loadJS = function( src, cb, ordered ){
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName( "script" )[ 0 ];
+        var script = w.document.createElement( "script" );
+
+        if (typeof(cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore( script, ref );
+
+        if (cb && typeof(cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if( typeof module !== "undefined" ){
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }( typeof global !== "undefined" ? global : this ));
+
+    loadJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js', true);
+    loadJS('/js/scripts.min.js', true);</script><script type="text/javascript">(function(d) {
       var config = {
         kitId: 'mte7xac',
         scriptTimeout: 3000
@@ -10,6 +43,6 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></div><nav><ul><li><a href="/">Resume</a></li><li><a href="../notes">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Switching Default Search (Updated)</h1><div class="notes"><p>As an American living in the UK, Chrome seems hell-bent on switching my default search engine from google.com to google.co.uk. Being the patriot that I am, I often find myself needing to switch it back after Chrome has surreptitiously changed my locale. Here is how you do it:</p><p>If you have a Mac, go to Library/Application Support/Google/Chrome/Default/Preferences and search for "last_known_google_url" and change it to the following:</p>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><a href="/"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></a></div><nav><ul><li><a href="/"><i class="icofont-business-man"></i> Resume</a></li><li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Switching Default Search (Updated)</h1><div class="notes"><p>As an American living in the UK, Chrome seems hell-bent on switching my default search engine from google.com to google.co.uk. Being the patriot that I am, I often find myself needing to switch it back after Chrome has surreptitiously changed my locale. Here is how you do it:</p><p>If you have a Mac, go to Library/Application Support/Google/Chrome/Default/Preferences and search for "last_known_google_url" and change it to the following:</p>
 <code>"last_known_google_url": "https://www.google.com/"</code>
-<p>Then that's it, you're done! Just quit out of Chrome and fire it back up and you should find that your default search engine and omnibox results will default to google.com or whatever country code you put in.</p><h2>Update (3/11/15)</h2><p>It seems that since I had first posted this, Chrome has gotten very angry if you try to edit that Preferences file. So instead, if you put <a href="http://www.google.com/ncr">http://www.google.com/ncr</a> into the omnibox, that will take you to google.com's search page. After you do that, try a search in there and then quit out of Chrome. Here's where I'm not sure when or how it updates, but you just have to fire up Chrome again and try searching in the omnibox for something. If you're still seeing the local version, rinse and repeat with the URL mentioned above and it should eventually take within about 3 or 5 restarts of Chrome.</p></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+<p>Then that's it, you're done! Just quit out of Chrome and fire it back up and you should find that your default search engine and omnibox results will default to google.com or whatever country code you put in.</p><h2>Update (3/11/15)</h2><p>It seems that since I had first posted this, Chrome has gotten very angry if you try to edit that Preferences file. So instead, if you put <a href="http://www.google.com/ncr">http://www.google.com/ncr</a> into the omnibox, that will take you to google.com's search page. After you do that, try a search in there and then quit out of Chrome. Here's where I'm not sure when or how it updates, but you just have to fire up Chrome again and try searching in the omnibox for something. If you're still seeing the local version, rinse and repeat with the URL mentioned above and it should eventually take within about 3 or 5 restarts of Chrome.</p></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><i class="icofont-mail"></i></a> <a href="https://twitter.com/stuartesantos"><i class="icofont-twitter"></i></a> <a href="https://github.com/stuartsantos"><i class="icofont-code"></i></a> <a href="https://www.linkedin.com/in/stuartsantos"><i class="icofont-linkedin"></i></a></div></section></footer></body></html>
