--- a/min/my-notes/swift.html
+++ b/min/my-notes/swift.html
@@ -1,4 +1,37 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My notes on Swift | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/js/scripts.min.js" async></script><script type="text/javascript">(function(d) {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My notes on Swift | Stuart Santos</title><link href="../img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="../css/styles.css"><meta name="description" content="This is the website of Stuart Santos, a web developer and designer with a background in Front End Development, UX, and UI work."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script>/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+    (function( w ){
+      var loadJS = function( src, cb, ordered ){
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName( "script" )[ 0 ];
+        var script = w.document.createElement( "script" );
+
+        if (typeof(cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore( script, ref );
+
+        if (cb && typeof(cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if( typeof module !== "undefined" ){
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }( typeof global !== "undefined" ? global : this ));
+
+    loadJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js', true);
+    loadJS('/js/scripts.min.js', true);</script><script type="text/javascript">(function(d) {
       var config = {
         kitId: 'mte7xac',
         scriptTimeout: 3000
@@ -10,4 +43,4 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></div><nav><ul><li><a href="../index.html">Resume</a></li><li><a href="../notes.html">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Flexbox</h1><p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p><div class="notes"><div class="note"><h3>Flexbox</h3><p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p></div><div class="note"><h3>Gruntfile.js Template</h3><p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p></div><div class="note"><h3>Git Basics</h3><p>Just some basic notes about working with Git to keep track of commonly used commands.</p></div><div class="note"><h3>Working with Swift</h3><p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p></div></div></section><section class="reading-wrapper"><h1 class="sectionTitle">Books I've Read</h1></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><a href="/"><img srcset="../img/profile.jpg 2x, ../img/profile-small.jpg 1x" src="../img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></a></div><nav><ul><li><a href="/"><i class="icofont-business-man"></i> Resume</a></li><li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Flexbox</h1><p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p><div class="notes"><div class="note"><h3>Flexbox</h3><p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p></div><div class="note"><h3>Gruntfile.js Template</h3><p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p></div><div class="note"><h3>Git Basics</h3><p>Just some basic notes about working with Git to keep track of commonly used commands.</p></div><div class="note"><h3>Working with Swift</h3><p>Since this is one of the newest languages I'm currently working with, I thought it would be a good exercise to write down as much of the important points as I can to help with material retention.</p></div></div></section><section class="reading-wrapper"><h1 class="sectionTitle">Books I've Read</h1></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><i class="icofont-mail"></i></a> <a href="https://twitter.com/stuartesantos"><i class="icofont-twitter"></i></a> <a href="https://github.com/stuartsantos"><i class="icofont-code"></i></a> <a href="https://www.linkedin.com/in/stuartsantos"><i class="icofont-linkedin"></i></a></div></section></footer></body></html>
