--- a/min/notes.html
+++ b/min/notes.html
@@ -1,4 +1,37 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My development notes | Stuart Santos</title><link href="img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="css/styles.css"><meta name="description" content="Notes about my development work and possible code fixes to help with past projects and new projects that may require the information in the future."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script><script src="/js/scripts.min.js" async></script><script type="text/javascript">(function(d) {
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>My development notes | Stuart Santos</title><link href="img/favicon.ico" rel="shortcut icon"><link rel="stylesheet" href="css/styles.css"><meta name="description" content="Notes about my development work and possible code fixes to help with past projects and new projects that may require the information in the future."><meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,user-scalable=no"><script>/*! loadJS: load a JS file asynchronously. [c]2014 @scottjehl, Filament Group, Inc. (Based on http://goo.gl/REQGQ by Paul Irish). Licensed MIT */
+    (function( w ){
+      var loadJS = function( src, cb, ordered ){
+        "use strict";
+        var tmp;
+        var ref = w.document.getElementsByTagName( "script" )[ 0 ];
+        var script = w.document.createElement( "script" );
+
+        if (typeof(cb) === 'boolean') {
+          tmp = ordered;
+          ordered = cb;
+          cb = tmp;
+        }
+
+        script.src = src;
+        script.async = !ordered;
+        ref.parentNode.insertBefore( script, ref );
+
+        if (cb && typeof(cb) === "function") {
+          script.onload = cb;
+        }
+        return script;
+      };
+      // commonjs
+      if( typeof module !== "undefined" ){
+        module.exports = loadJS;
+      }
+      else {
+        w.loadJS = loadJS;
+      }
+    }( typeof global !== "undefined" ? global : this ));
+
+    loadJS('https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js', true);
+    loadJS('/js/scripts.min.js', true);</script><script type="text/javascript">(function(d) {
       var config = {
         kitId: 'mte7xac',
         scriptTimeout: 3000
@@ -10,4 +43,4 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-51744150-1', 'auto');
-    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><img srcset="img/profile.jpg 2x, img/profile-small.jpg 1x" src="img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></div><nav><ul><li><a href="/">Resume</a></li><li><a href="#" class="selected">Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Notes</h1><p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but rather as an overview of things for me to keep in mind and to help myself or anyone else with future projects.</p><div class="notes"><div class="note"><h3><a href="my-notes/flexbox">Flexbox</a></h3><p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p></div><div class="note"><h3><a href="my-notes/gruntfile">Gruntfile.js template</a></h3><p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p></div><div class="note"><h3><a href="my-notes/git">Git basics</a></h3><p>Just some basic notes about working with Git to keep track of commonly used commands.</p></div><div class="note"><h3><a href="my-notes/retina">Generating retina favicons</a></h3><p>This post deals with creating retina-grade favicons for your website. It does require purchase of software, but I've found it to be the easiest way to accomplish this task.</p></div><div class="note"><h3><a href="my-notes/css-font-properties">CSS font properties</a></h3><p>Making sure that the type on your website is optimized for legibility is important to keep in mind. To help you acheive better display of your type, this will show you different CSS properties and general best practices to implement on your site.</p></div><div class="note"><h3><a href="my-notes/google">Switching default search (updated)</a></h3><p>Google Chrome will sometimes switch your default search engine to whatever country you're in due to your geolocation information. If you'd like to override that behavior, this is how you do it.</p></div></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><span class="icon-mail"></span></a> <a href="https://twitter.com/stuartesantos"><span class="icon-twitter2"></span></a> <a href="https://github.com/stuartsantos"><span class="icon-github"></span></a> <a href="https://www.linkedin.com/in/stuartsantos"><span class="icon-linkedin"></span></a></div></section></footer></body></html>
+    ga('send', 'pageview');</script></head><body><header><div class="top"><div class="name"><a href="/"><img srcset="img/profile.jpg 2x, img/profile-small.jpg 1x" src="img/profile-small.jpg" alt="Picture of Stuart Santos"><div class="fullname">Stuart Santos</div></a></div><nav><ul><li><a href="/"><i class="icofont-business-man"></i> Resume</a></li><li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li></ul></nav></div></header><main><section class="reading-wrapper"><h1 class="sectionTitle">Notes</h1><p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but rather as an overview of things for me to keep in mind and to help myself or anyone else with future projects.</p><div class="notes"><div class="note"><h3><a href="my-notes/flexbox">Flexbox</a></h3><p>This is a very short note about working with flexbox and some quirks that may show up. It is specifically relevant if you have to support Blackberry 7 since this issue arises for that legacy platform.</p></div><div class="note"><h3><a href="my-notes/gruntfile">Gruntfile.js template</a></h3><p>Starting a new project or repository usually requires the monotony of setting up some base files that help with your workflow. This is my standard Gruntfile.js file that I use as a template for setting up new projects which covers some of the most common tasks I use in everyday coding.</p></div><div class="note"><h3><a href="my-notes/git">Git basics</a></h3><p>Just some basic notes about working with Git to keep track of commonly used commands.</p></div><div class="note"><h3><a href="my-notes/retina">Generating retina favicons</a></h3><p>This post deals with creating retina-grade favicons for your website. It does require purchase of software, but I've found it to be the easiest way to accomplish this task.</p></div><div class="note"><h3><a href="my-notes/css-font-properties">CSS font properties</a></h3><p>Making sure that the type on your website is optimized for legibility is important to keep in mind. To help you acheive better display of your type, this will show you different CSS properties and general best practices to implement on your site.</p></div><div class="note"><h3><a href="my-notes/google">Switching default search (updated)</a></h3><p>Google Chrome will sometimes switch your default search engine to whatever country you're in due to your geolocation information. If you'd like to override that behavior, this is how you do it.</p></div></div></section></main><footer><section class="reading-wrapper">&copy; 2020 Stuart Santos<div class="contact"><a href="mailto:santos.stuart@gmail.com"><i class="icofont-mail"></i></a> <a href="https://twitter.com/stuartesantos"><i class="icofont-twitter"></i></a> <a href="https://github.com/stuartsantos"><i class="icofont-code"></i></a> <a href="https://www.linkedin.com/in/stuartsantos"><i class="icofont-linkedin"></i></a></div></section></footer></body></html>
