fixed reading wrapper class adding unnecessary space btwn footer and main

--- a/html/404.html
+++ b/html/404.html
@@ -81,7 +81,7 @@
       </nav>
     </div>
   </header>
-  <main>
+  <main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">404</h1>
       <p class="intro">Sorry. Something went wrong. <a href="/">Return to Homepage &gt;</a></p>
