--- a/html/my-notes/flexbox.html
+++ b/html/my-notes/flexbox.html
@@ -82,7 +82,7 @@
       </nav>
     </div>
   </header>
-	<main>
+  <main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Flexbox</h1>
       <div class="notes">
