--- a/html/my-notes/retina.html
+++ b/html/my-notes/retina.html
@@ -81,7 +81,7 @@
       </nav>
     </div>
   </header>
-	<main>
+  <main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Generating retina favicons</h1>
       <div class="notes">
