--- a/html/my-notes/swift.html
+++ b/html/my-notes/swift.html
@@ -81,7 +81,7 @@
       </nav>
     </div>
   </header>
-	<main>
+  <main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Flexbox</h1>
       <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but as an overview of things for me to keep in mind to help me or anyone else with future projects.</p>
