--- a/html/work.html
+++ b/html/work.html
@@ -81,7 +81,7 @@
       </nav>
     </div>
   </header>
-	<main>
+	<main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">My Work</h1>
       <p class="intro">I have consolidated a variety of projects that showcase different coding abilities in this area. Please contact me if you'd like any additional examples</p>
