--- a/html/my-notes/css-font-properties.html
+++ b/html/my-notes/css-font-properties.html
@@ -82,7 +82,7 @@
       </nav>
     </div>
   </header>
-	<main>
+  <main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Optimizing typography through CSS</h1>
       <div class="notes">
