--- a/html/notes.html
+++ b/html/notes.html
@@ -81,7 +81,7 @@
       </nav>
     </div>
   </header>
-	<main>
+	<main class="rw-mt">
     <section class="reading-wrapper">
       <h1 class="sectionTitle">Notes</h1>
       <p class="intro">This section is devoted to my development notes where I keep track of things like my workflow, templates, and code fixes. It is not meant to be a blog, but rather as an overview of things for me to keep in mind and to help myself or anyone else with future projects.</p>
