--- a/html/my-notes/gruntfile.html
+++ b/html/my-notes/gruntfile.html
@@ -76,7 +76,7 @@
       <nav>
         <ul>
           <li><a href="/"><i class="icofont-business-man"></i> Resume</a></li>
-          <li><a href="#" class="selected"><i class="icofont-notebook"></i> Notes</a></li>
+          <li><a href="/notes"><i class="icofont-notebook"></i> Notes</a></li>
         </ul>
       </nav>
     </div>
